src/objects/Site__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_POC_Determined__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date POC Determined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dollar_Loss__c</fullName>
        <label>Dollar Loss $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fraud_Claim_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fraud Claim Asset</label>
        <referenceTo>Fraud_Purchase_Device__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multiple_POC_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check for Yes</inlineHelpText>
        <label>Multiple POC Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POC_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date card skimmed</inlineHelpText>
        <label>POC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WEX_Site_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WEX Site ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Branded_Wholesaler__c</columns>
        <columns>Brand__c</columns>
        <columns>Location__c</columns>
        <columns>NAME</columns>
        <columns>Site_Street__c</columns>
        <columns>Site_City__c</columns>
        <columns>Site_State__c</columns>
        <columns>Site_County__c</columns>
        <columns>Site_Zip_Postal_Code__c</columns>
        <columns>TID__c</columns>
        <columns>Site_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>